argocd/applications/pgadmin/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  loadBalancerClass: tailscale
